[package]
name = "vulkan_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
log = "0.4.25"
cgmath = "0.18.0"
png = "0.17.16"
pretty_env_logger = "0.5.0"
thiserror = "2.0.11"
tobj = { version = "4.0.3", features = ["log"] }
vulkanalia = { version = "=0.26.0", features = ["libloading", "provisional", "window"] }
winit = "0.29"

